--- a/p2p-pages/src/main/resources/application.yml
+++ b/p2p-pages/src/main/resources/application.yml
@@ -1,23 +1,3 @@
 spring:
-  application:
-    name: p2p-pages
-
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 192.168.0.118:8848
-        namespace: p2p
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.0.118/p2p?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-    password: cpy50686868cpy
-  redis:
-    port: 6379
-    host: 192.168.0.118
-server:
-  port: 7101
-  servlet:
-    context-path: /p2p
-
+  profiles:
+    active: dev
