--- a/p2p-userCenter/src/main/resources/application.yml
+++ b/p2p-userCenter/src/main/resources/application.yml
@@ -1,15 +1,3 @@
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 192.168.0.118:8848
-        namespace: p2p
-
-  application:
-    name: p2p-userCenter
-
-
-server:
-  port: 7102
-  servlet:
-    context-path: /p2p
+  profiles:
+    active: dev
