--- a/p2p-loginAndRegister/src/main/resources/application-up.yml
+++ b/p2p-loginAndRegister/src/main/resources/application-up.yml
@@ -10,7 +10,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/p2p?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/p2p?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: cpy50686868cpy
   redis:
