--- a/p2p-auth/src/main/resources/application-up.yml
+++ b/p2p-auth/src/main/resources/application-up.yml
@@ -13,12 +13,12 @@ spring:
 
   redis:
     port: 6379
-    host: localhost
+    host: 127.0.0.1
 
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 101.33.235.76:8848
         namespace: p2p
 
   application:
