--- a/p2p-pages/src/main/resources/application-up.yml
+++ b/p2p-pages/src/main/resources/application-up.yml
@@ -5,7 +5,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 101.33.235.76:8848
         namespace: p2p
 
   datasource:
@@ -15,7 +15,7 @@ spring:
     password: cpy50686868cpy
   redis:
     port: 6379
-    host: localhost
+    host: 127.0.0.1
 server:
   port: 7101
   servlet:
